# assembly_assist_ws

./: .gitignore  1110changeui.py  1110visualizer.py  Initial.py  Project Implementation Guide.md  README.md  SAR_Anzeigeplan_DE.xlsx  Test3.py  Test3_info_add.py  Untitled 1.odt  cordination.blend  draw_grid.py  install_dependencies.sh  opencv_canvas.py  path_info.py  requirements.txt  sar.py  schedular.py  scheduler(1).py  scheduler.py  scheduler_zh.py  scheduler_zh_martix.py  script.py  tcp_reader.py  test.py  vis+h_matrix.py  vis.py  workspace_visualizer(1).py  workspace_visualizer(2).py  workspace_visualizer.py  workspace_visualizer1112.py  workspace_visualizer_old.py
Distance v2 working/Motor_Left/: Motor_Left.ino
Distance v2 working/Motor_Right/: Motor_Right.ino
Distance v2 working/camera_calibration/: CameraCali_test.py
Distance v2 working/log/: Hand_pos_1751974107.csv  Hand_pos_1751976552.csv  Hand_pos_1751977864.csv  TCP_1751974406.csv  TCP_1751976089.csv  TCP_1751976363.csv  TCP_1751978510.csv
Distance v2 working/src/: ble_sender.py  calibration_data.npz  camera_stream.py
Distance v3 working/log/: Hand_pos_1751974406.csv  Hand_pos_1751976363.csv  TCP_1751976552.csv  TCP_1751977864.csv
Distance v3 working/src/: ble_sender.py
Distance v4 constant vibro/camera_calibration/: CameraEye.py
Distance v4 constant vibro/log/: Hand_pos_1751975681.csv  Hand_pos_1751976089.csv  Hand_pos_1751978510.csv  TCP_1751975681.csv
Distance v4 constant vibro/src/: ble_sender.py  main.py
SAR/: vis+h_matrix.py
config/: steps.yaml
install/: local_setup.sh  setup.sh
install/gesture_processor_node/share/gesture_processor_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/projection_node/share/projection_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: camera_and_gesture.launch.py  projection_only.launch.py  sim_camera_and_gesture.launch.py  sim_full_with_projection.launch.py
log/: latest_build
src/: H_calculation copy.py  draw_grid1.py
src/TCP/: draw_grid.py  tcp_reader.py  vis+h_matrix.py
src/camera_node/: CMakeLists.txt  package.xml  setup.py
src/camera_node/camera_node/: camera_node.py
src/fake_camera_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/state_manager_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/state_manager_node/state_manager_node/: state_manager_node.py
(+35 files in other folders)
