<?xml version="1.0"?>
<package format="3">
  <name>camera_node</name>
  <version>0.0.1</version>
  <description>Basler 相机采集并发布图像流</description>

  <maintainer email="info.yahuan@gmail.com">Yahuan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
