<?xml version="1.0"?>
<package format="3">
  <name>state_manager_node</name>
  <version>0.0.1</version>
  <description>Manages assembly steps based on gesture confirmation</description>
  <maintainer email="info.yahuan@gmail.com">Yahuan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
