<?xml version="1.0"?>
<package format="3">
  <name>gesture_processor_node</name>
  <version>0.0.1</version>
  <description>Hand gesture detection using MediaPipe</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
