<?xml version="1.0"?>
<package format="3">
  <name>projection_node</name>
  <version>0.0.2</version>
  <description>Full-screen projection node for deployment</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pillow</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
